--- a/slider/slider.css
+++ b/slider/slider.css
@@ -29,6 +29,22 @@
     border-radius: 20px;
     box-shadow:  0 30px 50px #505050;
 }
+
+.item-german{
+    width:200px;
+    height:300px;
+    background-position: 50% 50%;
+    display: inline-block;
+    transition: 0.5s;
+    background-size: cover;
+    position: absolute;
+    z-index: 1;
+    top:50%;
+    transform: translate(0,-50%);
+    border-radius: 20px;
+    box-shadow:  0 30px 50px #505050;
+}
+
 .item:nth-child(1),
 .item:nth-child(2){
     left:0;
@@ -85,6 +101,63 @@
     opacity: 0;
     animation:showcontent 1s ease-in-out 0.6s 1 forwards
 }
+
+.item-german:nth-child(1),
+.item-german:nth-child(2){
+    left:0;
+    top:0;
+    transform: translate(0,0);
+    border-radius: 0;
+    width:100%;
+    height:100%;
+    box-shadow: none;
+}
+.item-german:nth-child(3){
+    left:50%;
+}
+.item-german:nth-child(4){
+    left:calc(50% + 220px);
+}
+.item-german:nth-child(5){
+    left:calc(50% + 440px);
+}
+.item-german:nth-child(n+6){
+    left:calc(50% + 660px);
+    opacity: 0;
+}
+.item-german .content{
+    position: absolute;
+    top:50%;
+    left:100px;
+    width:300px;
+    text-align: left;
+    padding:0;
+    color:#eee;
+    transform: translate(0,-50%);
+    display: none;
+    font-family: system-ui;
+}
+.item-german:nth-child(2) .content{
+    display: block;
+    z-index: 1;
+}
+.item-german .name{
+    font-size: 40px;
+    font-weight: bold;
+    opacity: 0;
+    animation:showcontent 1s ease-in-out 1 forwards
+}
+.item-german .des{
+    margin:20px 0;
+    opacity: 0;
+    animation:showcontent 1s ease-in-out 0.3s 1 forwards
+}
+.item-german button{
+    padding:10px 20px;
+    border:none;
+    opacity: 0;
+    animation:showcontent 1s ease-in-out 0.6s 1 forwards
+}
 @keyframes showcontent{
     from{
         opacity: 0;
@@ -111,4 +184,27 @@
     transition: 0.5s;
 }.buttons button:hover{
     background-color: #cccccb;
+}
+
+.slide-container {
+    display: flex;
+    overflow: hidden;
+    width: 100%;
+    position: relative;
+}
+
+.slide-container .item {
+    min-width: 100%;
+    transition: transform 0.5s ease;
+}
+
+.slide-german-container{
+     display: flex;
+    overflow: hidden;
+    width: 100%;
+    position: relative;
+}
+.slide-german-container .item {
+    min-width: 100%;
+    transition: transform 0.5s ease;
 }
